--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>A website created by me.</p>
+  <h1>Max Escobar Viegas</h1>
+  <p>Quién es??</p>
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
+  <a href="media.html">Media</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
@@ -24,7 +24,7 @@
   <div class="side">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
+    <div  class="fakeimg" style="height:200px;">Hola</div>
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
