--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="header">
-  <h1>Max Escobar Viegas</h1>
+    <div class="enlargetext"><h1>Max Escobar Viegas</h1></div>
   <p>Quién es??</p>
 </div>
 
@@ -24,7 +24,7 @@
   <div class="side">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
-    <div  class="fakeimg" style="height:200px;">Hola</div>
+    <img class= smallimg src="images/image_1.JPG" >
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
