--- a/media.html
+++ b/media.html
@@ -9,6 +9,6 @@
 <link rel="stylesheet"  href="styles.css"  />
 </head>
 <body>
-    <img class= smallimg src="images/image_1.JPG" alt="A black, brown, and white dog wearing a kerchief">
+    <img class= smallimg src="images/image_1.JPG" >
 </body>
 </html>
