--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
     <div class="div_personal" id ="skills" hidden="hidden">
       <h1>Skills and Hobbies</h1>
+      <h2>LANGUAGE SKILLS</h2>
       <p><b>Mother tongue:</b> SPANISH</p>
       <div class="table">
         <table>
@@ -133,9 +134,10 @@
             </tr>
           </tbody>
         </table>
-
       </div>
-      
+      <h2>PROGRAMMING SKILLS</h2>
+
+      <p> Python | C# | PowerBI | R | MVC | API | ASP.NET | SQL | Microsoft Office | RPA | Git | HTML | Agile (Scrum) | </p>
     </div>
     
   </div>
