--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Mi nombre es Max</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"  href="styles.css"  />
@@ -10,28 +10,26 @@
 <body>
 
 <div class="header">
-    <div class="enlargetext"><h1>Max Escobar Viegas</h1></div>
-  <p>Quién es??</p>
+    <div class="enlargetext"><h1>Mi nombre es Max</h1></div>
+  <p>Wazup??</p>
 </div>
 
 <div class="navbar">
-  <a href="media.html">Media</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="media.html">Max</a>
+  <a href="#">CV</a>
+  <a href="maxiboy.html">Maxiboy</a>
   <a href="#" class="right">Link</a>
 </div>
 
 <div class="row">
   <div class="side">
     <h2>About Me</h2>
-    <h5>Photo of me:</h5>
     <img class= smallimg src="images/image_1.JPG" >
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
+    <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
+    <h3>This might interest you:</h3>
+    <div class="fakeimg" style="height:60px;">Link 1 </div><br>
+    <div class="fakeimg" style="height:60px;">Link 2</div><br>
+    <div class="fakeimg" style="height:60px;">Link 3</div>
   </div>
   <div class="main">
     <div class="row">
@@ -126,25 +124,32 @@
           <tbody>
             <tr>
               <td>English</td>
+              <td>C1</td>
+              <td>C1</td>
               <td>B2</td>
+              <td>C1</td>
               <td>B2</td>
-              <td>B2</td>
-              <td>B2</td>
-              <td>B2</td>
+            </tr>
+            <tr>
+              <td>German</td>
+              <td>A1</td>
+              <td>A1</td>
+              <td>A1</td>
+              <td>A1</td>
+              <td>A1</td>
             </tr>
           </tbody>
         </table>
       </div>
       <h2>PROGRAMMING SKILLS</h2>
-
-      <p> Python | C# | PowerBI | R | MVC | API | ASP.NET | SQL | Microsoft Office | RPA | Git | HTML | Agile (Scrum) | </p>
+      <p> Python | C# | PowerBI | Mixed-Integer Linear Programming | API | R | MVC | .NET | SQL | RPA | Git | HTML | ETL | Agile (Scrum) | JavaScript  </p>
     </div>
     
   </div>
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>Treibs nicht zu bunt</h2>
 </div>
 
 
