--- a/maxiboy.html
+++ b/maxiboy.html
@@ -18,7 +18,7 @@
 
 <div class="navbar">
   <a href="media.html">Max</a>
-  <a href="#">CV</a>
+  <a href="index.html">CV</a>
   <a href="maxiboy.html">Maxiboy</a>
   <a href="#" class="right">Link</a>
 </div>
@@ -35,7 +35,7 @@
   </div>
   <div class="main">
     <div class= presskit id="presskit">
-      <script>PDFObject.embed("pdf/presskit.pdf", "#presskit")</script>
+      <script> embedPDF("presskit")</script>     
     </div>
   </div>
 
