--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="navbar">
   <a href="media.html">Max</a>
-  <a href="#">CV</a>
+  <a href="index.html">CV</a>
   <a href="maxiboy.html">Maxiboy</a>
   <a href="#" class="right">Link</a>
 </div>
@@ -27,9 +27,12 @@
     <img class= smallimg src="images/image_1.JPG" >
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
     <h3>This might interest you:</h3>
-    <div class="fakeimg" style="height:60px;">Link 1 </div><br>
-    <div class="fakeimg" style="height:60px;">Link 2</div><br>
-    <div class="fakeimg" style="height:60px;">Link 3</div>
+
+    <div class="interesting-stuff">
+
+
+    </div>
+
   </div>
   <div class="main">
     <div class="row">
