--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 
 <div class="footer">
   <h2>Treibs nicht zu bunt</h2>
+<div> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5mSc80p1AE0B9ADUW14fNb?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</iframe>
+
+</div>
 </div>
 
 
