chore: updated cv

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="row">
   <div class="side">
     <h2>About Me</h2>
-    <img class= smallimg src="images/image_1.JPG" >
+    <img class= smallimg src="images/image_2.JPG" >
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
     <h3>This might interest you:</h3>
 
@@ -45,8 +45,17 @@
     <div class="div_personal" id="work">
 
     <h1>Work Experience</h1>
+
+    <h2>WORKING STUDENT – SIEMENS</h2>
+    <h5>1/10/2023 – CURRENT – München, Germany</h5>
+   
+    <p>Support in the configuration of demonstration systems for Perception applications based on the Siemens
+      Industrial Edge infrastructure. This includes the configuration and installation of systems on peripheral
+      devices and associated applications as well as the adaptation and further development of the applications,
+      e.g. in the area of data and result visualization in graphical user interfaces.</p>
+    <br>
     <h2>IT CONSULTANT – PRACTIA GLOBAL</h2>
-    <h5>29/12/2020 – CURRENT – Santiago, Chile</h5>
+    <h5>29/12/2020 – 31/12/2023 – Santiago, Chile</h5>
    
     <p>Implementing automation solutions at the Associate's Digital Experience area in Walmart in order to
       enhance their daily working process. This is achieved by a series of tasks that consist of scouting business
@@ -88,7 +97,15 @@
 
     </div>
 
-    <div class="div_personal" id="education" hidden="hidden">
+    <div class="div_personal" id="education" hidden="hidden"> 
+
+    <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
+    <h5>01/10/2023 – CURRENT – München, Germany</h5>
+   
+    <p>Address Arcisstr. 21, 80333, München, Germany. <a href="https://www.tum.de/studium/studienangebot/detail/management-and-technology-tum-bwl-master-of-science-msc">Link to Degree´s curriculum.</a></p>
+    <br>
+
+
     <h1>Education and Training</h1>
     <h2>INDUSTRIAL ENGINEER – Universidad de Chile</h2>
     <h5>28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
@@ -134,17 +151,17 @@
             </tr>
             <tr>
               <td>German</td>
-              <td>A1</td>
-              <td>A1</td>
-              <td>A1</td>
-              <td>A1</td>
-              <td>A1</td>
+              <td>A2</td>
+              <td>A2</td>
+              <td>A2</td>
+              <td>A2</td>
+              <td>A2</td>
             </tr>
           </tbody>
         </table>
       </div>
       <h2>PROGRAMMING SKILLS</h2>
-      <p> Python | C# | PowerBI | Mixed-Integer Linear Programming | API | R | MVC | .NET | SQL | RPA | Git | HTML | ETL | Agile (Scrum) | JavaScript  </p>
+      <p> Rust | Python | Java | C# | PowerBI | Mixed-Integer Linear Programming | API | R | MVC | .NET | SQL | RPA | Git | HTML | ETL | Agile (Scrum) | JavaScript  </p>
     </div>
     
   </div>
