chore: added cv download

--- a/media.html
+++ b/media.html
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Me</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"  href="styles.css"  />
 </head>
 <body>
-    <img class= smallimg src="images/image_2.JPG" >
+    <img class= smallimg src="images/image_1.png" >
 </body>
 </html>
