--- a/download_cv.html
+++ b/download_cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Download CV</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"  href="styles.css"  />
@@ -18,9 +18,9 @@
 
 <div class="navbar">
   <a href="media.html">Max</a>
-  <a href="index.html">CV</a>
+  <a href="index.html">About me</a>
   <a href="maxiboy.html">Maxiboy</a>
-  <a href="#" class="right">Link</a>
+  <a href="download_cv.html" class="right">CV download</a>
 </div>
 
 <div class="row">
@@ -34,8 +34,8 @@
     </div>
   </div>
   <div class="main">
-    <div class= presskit id="cv">
-      <script> embedPDF("cv_2024")</script>     
+    <div class= presskit id="presskit">
+      <script> embedPDF("cv_max_escobar_2024")</script>     
     </div>
   </div>
 
