--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="header">
     <div class="enlargetext"><h1>Mi nombre es Max</h1></div>
-  <p>Wazup??</p>
+  <p>Wie geht's?</p>
 </div>
 
 <div class="navbar">
@@ -24,7 +24,7 @@
 <div class="row">
   <div class="side">
     <h2>About Me</h2>
-    <img class= smallimg src="images/image_2.JPG" >
+    <img class= smallimg src="images/image_2.png" >
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
     <h3>This might interest you:</h3>
 
@@ -168,7 +168,7 @@
 </div>
 
 <div class="footer">
-  <h2>Treibs nicht zu bunt</h2>
+  <h2>Treibs nicht zu bunt 🪂</h2>
 </div>
 </div>
 
