chore:updated images

--- a/maxiboy.html
+++ b/maxiboy.html
@@ -20,13 +20,13 @@
   <a href="media.html">Max</a>
   <a href="index.html">CV</a>
   <a href="maxiboy.html">Maxiboy</a>
-  <a href="#" class="right">Link</a>
+  <a href="download_cv.html" class="right">CV download</a>
 </div>
 
 <div class="row">
   <div class="side">
     <h2>About Me</h2>
-    <img class= smallimg src="images/image_1.png" >
+    <img class= smallimg src="images/image_2.jpg" >
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
     <h3>This might interest you:</h3>
     <div class="interesting-stuff">
