--- a/media.html
+++ b/media.html
@@ -9,6 +9,6 @@
 <link rel="stylesheet"  href="styles.css"  />
 </head>
 <body>
-    <img class= smallimg src="images/image_1.png" >
+    <img class= smallimg src="images/image_2.jpg" >
 </body>
 </html>
