fix: id for pdfs

--- a/maxiboy.html
+++ b/maxiboy.html
@@ -34,8 +34,8 @@
     </div>
   </div>
   <div class="main">
-    <div class= presskit id="cv">
-      <script> embedPDF("cv_2024")</script>     
+    <div class= presskit id="presskit">
+      <script> embedPDF("presskit")</script>     
     </div>
   </div>
 
