--- a/download_cv.html
+++ b/download_cv.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="main">
-    <div class= presskit id="presskit">
+    <div class= cv id="cv">
       <script> embedPDF("cv_max_escobar_2024")</script>     
     </div>
   </div>
