chore: renamed cv

--- a/download_cv.html
+++ b/download_cv.html
@@ -35,7 +35,7 @@
   </div>
   <div class="main">
     <div class="cv" id="cv">
-      <script> embedPDF("cv_max_escobar_2024")</script>     
+      <script> embedPDF("cv")</script>     
     </div>
   </div>
 
