--- a/download_cv.html
+++ b/download_cv.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="main">
-    <div class="cv" id="cv">
+    <div class= cv id="cv">
       <script> embedPDF("cv")</script>     
     </div>
   </div>
