--- a/download_cv.html
+++ b/download_cv.html
@@ -17,8 +17,7 @@
 </div>
 
 <div class="navbar">
-  <a href="media.html">Max</a>
-  <a href="index.html">About me</a>
+  <a href="index.html">CV</a>
   <a href="maxiboy.html">Maxiboy</a>
   <a href="download_cv.html" class="right">CV download</a>
 </div>
