chore: added cv and presskit styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles.css" />
 <script type="text/javascript" src="scripts.js"></script>
 </head>
-<body onload="randomizeProfilePicture()"></body>
+<body onload="randomizeProfilePicture()">
 
 <div class="header">
     <img src="images/profile.jpg" alt="Max Profile Picture" class="profile-pic"/>
