fix: elements load fir DOM

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css" />
-<script type="text/javascript" src="scripts.js"></script>
+
 </head>
 <body onload="randomizeProfilePicture()">
 
@@ -50,16 +50,17 @@
       devices and associated applications as well as the adaptation and further development of the applications,
       e.g. in the area of data and result visualization in graphical user interfaces.</p>
     <br>
-    <h2>IT CONSULTANT – PRACTIA GLOBAL</h2>
+    <h2>AUTOMATION CONSULTANT – PRACTIA GLOBAL</h2>
     <h5>29/12/2020 – 31/12/2023 – Santiago, Chile</h5>
    
-    <p>Implementing automation solutions at the Associate's Digital Experience area in Walmart in order to
-      enhance their daily working process. This is achieved by a series of tasks that consist of scouting business
-      processes with high automation potential. Designing, developing and implementing the solutions, combining
-      different tools and frameworks if needed. Collecting data for visualization and monitoring of the business's
-      performance via BI dashboards.</p>
+    <p>Implementing software automation solutions for the retail industry, aiming to enhance it's daily working process,
+      by means of reducing manual labor and optimizing operational costs. This is achieved by a series of tasks, which 
+      consists of scouting business processes with high automation potential, designing, developing and implementing the
+      solutions. Combining different tools and frameworks if needed. Collecting data for visualization and monitoring of
+       the business's performance via interactive dashboards.
+    </p>
     <br>
-    <h2>RPA DEVELOPER – SISUA DIGITAL</h2>
+    <h2>RPA CONSULTANT – SISUA DIGITAL</h2>
     <h5>29/10/2018 – 28/11/2020 – Santiago, Chile </h5>
    
     <p>Implementing automation solutions for different clients in the energy, retail and scientific research market in
@@ -165,6 +166,9 @@
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
 </div>
+
+<script type="text/javascript" src="scripts.js"></script>
+
 </body>
 </html>
 
