--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles.css" />
 
 </head>
-<body onload="randomizeProfilePicture()">
+<body>
 
 <div class="header">
     <img src="images/profile.jpg" alt="Max Profile Picture" class="profile-pic"/>
