fix: renamed picture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="header">
-    <img src="images/profile.jpg" alt="Max Profile Picture" class="profile-pic"/>
+    <img src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
     <div class="enlargetext"><h1>Mi nombre es Max</h1></div>
     <p>Wie geht's?</p>
 </div>
