--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2>About Me</h2>
     <img class="smallimg" src="images/image_2.jpg" alt="Memory Collecting">
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
-    <h3>This might interest you:</h3>
+    <h3>Some of my songs 🤙🏼:</h3>
 
     <div class="interesting-stuff"></div>
   </div>
@@ -166,6 +166,7 @@
 
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
+  <p>Made with ❤️‍🔥 during my free time</p>
 </div>
 
 <script type="text/javascript" src="scripts.js"></script>
