chore: edited text

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <div class="header">
     <img id= "profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
-    <div class="enlargetext"><h1>Mi nombre es Max</h1></div>
-    <p>Wie geht's?</p>
+    <div class="enlargetext"><h1>Me llamo Max</h1></div>
+    <p>Wie geht's bruda?</p>
 </div>
 
 <div class="navbar">
-  <a href="index.html">CV</a>
-  <a href="maxiboy.html">Maxiboy</a>
+  <a href="index.html">Curriculum</a>
+  <a href="maxiboy.html">Presskit</a>
   <a href="download_cv.html" class="right">CV download</a>
 </div>
 
@@ -27,7 +27,7 @@
     <h2>About Me</h2>
     <img class="smallimg" src="images/image_2.jpg" alt="Memory Collecting">
     <p>Collecting memories since '95. I spend most of my time doing things that I don't completely understand. To control my expectations, I tend to think that everything is a Proof of Concept of something bigger (or smaller). When I don't know what else to do, I plan a trip or write a song.</p>
-    <h3>Some of my songs 🤙🏼:</h3>
+    <h3>Check it out 🤙🏼:</h3>
 
     <div class="interesting-stuff"></div>
   </div>
@@ -166,7 +166,7 @@
 
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
-  <p>Made with ❤️‍🔥 during my free time</p>
+  <p>Made with 🍺 during my free time</p>
 </div>
 
 <script type="text/javascript" src="scripts.js"></script>
