chore: add skills icons

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         the article in a local newspaper.</a></p>
     </div>
 
+    <h1>Education and Training</h1>
+
     <div class="div_personal" id="education" hidden="hidden">
       <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
     <h5>01/10/2023 – CURRENT – München, Germany</h5>
@@ -101,7 +103,7 @@
     <br>
 
 
-    <h1>Education and Training</h1>
+  
     <h2>INDUSTRIAL ENGINEER – Universidad de Chile</h2>
     <h5>28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
    
@@ -122,7 +124,7 @@
     <div class="div_personal" id="skills" hidden="hidden">
       <h1>Skills and Hobbies</h1>
       <h2>LANGUAGE SKILLS</h2>
-      <p><b>Mother tongue:</b> SPANISH</p>
+      <p><b>Mother tongue:</b> Spanish</p>
       <div class="table">
         <table>
           <thead>
@@ -155,9 +157,17 @@
           </tbody>
         </table>
       </div>
-      <h2>PROGRAMMING SKILLS</h2>
-      <p> Rust | Python | Java | C# | PowerBI | Mixed-Integer Linear Programming | API | R | MVC | .NET | SQL | RPA | Git | HTML | ETL | Agile (Scrum) | JavaScript  </p>
-    </div>
+      <h2>I have exeperience using: </h2>
+      <div class="skills-container">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/rust.svg" alt="Rust" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/python.svg" alt="Python" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/java.svg" alt="Java" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/csharp.svg" alt="C#" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/powerbi.svg" alt="Power BI" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/git.svg" alt="Git" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/sql.svg" alt="SQL" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/javascript.svg" alt="JavaScript" class="skill-logo">
+      </div></div>
     
   </div>
     </div>
