chore: added more emojisssssss

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <div class="header">
     <img id= "profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
-    <div class="enlargetext"><h1>Me llamo Max</h1></div>
-    <p>Wie geht's bruda?</p>
+    <div class="enlargetext"><h1>Max Escobar Viegas</h1></div>
+    <p>Programming 🧑🏻‍💻| Music 🎸| Climbing 🧗🏼</p>
 </div>
 
 <div class="navbar">
@@ -165,7 +165,8 @@
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/csharp.svg" alt="C#" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/powerbi.svg" alt="Power BI" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/git.svg" alt="Git" class="skill-logo">
-        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/sql.svg" alt="SQL" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/sqlite.svg" alt="SQLite" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/mysql.svg" alt="MySQL" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/javascript.svg" alt="JavaScript" class="skill-logo">
       </div></div>
     
