--- a/maxiboy.html
+++ b/maxiboy.html
@@ -7,6 +7,7 @@
 <meta name="keywords" content="portfolio-website" />
 <link rel="stylesheet" href="styles.css" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
