--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
-  <p>Made with 🍺 during my free time</p>
+  <p>Made with 🍺 somewhere</p>
 </div>
 
 <script type="text/javascript" src="scripts.js"></script>
