--- a/download_cv.html
+++ b/download_cv.html
@@ -7,6 +7,8 @@
 <meta name="keywords" content="portfolio-website" />
 <link rel="stylesheet" href="styles.css" />
 <script type="text/javascript" src="scripts.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.8/pdfobject.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -45,7 +47,7 @@
 
 <div class="footer">
   <h2>Treibs nicht zu bunt 🪂</h2>
-  <p>Made with 🍺 during my free time</p>
+  <p>Made with 🍺 somewhere</p>
 </div>
 
 
