--- a/index.html
+++ b/index.html
@@ -95,16 +95,15 @@
         the article in a local newspaper.</a></p>
     </div>
 
-    <h1>Education and Training</h1>
+    
 
     <div class="div_personal" id="education" hidden="hidden">
-      <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
+    <h1>Education and Training</h1>
+    <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
     <h5>01/10/2023 – CURRENT – München, Germany</h5>
    
     <p>Address Arcisstr. 21, 80333, München, Germany. <a href="https://www.tum.de/studium/studienangebot/detail/management-and-technology-tum-bwl-master-of-science-msc">Link to Degree´s curriculum.</a></p>
     <br>
-
-
   
     <h2>INDUSTRIAL ENGINEER – Universidad de Chile</h2>
     <h5>28/02/2014 – 22/12/2020 – Santiago, Chile</h5>
@@ -159,7 +158,7 @@
           </tbody>
         </table>
       </div>
-      <h2>I have exeperience using: </h2>
+      <h2>Experience using: </h2>
       <div class="skills-container">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/rust.svg" alt="Rust" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/python.svg" alt="Python" class="skill-logo">
