chore: more fitting color pallete

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
 
-<div class="header">
-    <img id= "profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
-    <div class="enlargetext"><h1>Max Escobar Viegas</h1></div>
-    <p>Programming 🧑🏻‍💻| Music 🎸| Climbing 🧗🏼</p>
+  <div class="header">
+    <div class="profile-wrapper">
+        <img id="profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
+    </div>
+    <div class="enlargetext">
+        <h1>Max Escobar Viegas</h1>
+        <p>Programming 🧑🏻‍💻 | Music 🎸 | Climbing 🧗🏼</p>
+    </div>
 </div>
 
 <div class="navbar">
