--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 <body>
 
   <div class="header">
-    <div class="profile-wrapper">
-        <img id="profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
-    </div>
-    <div class="enlargetext">
-        <h1>Max Escobar Viegas</h1>
-        <p>Programming 🧑🏻‍💻 | Music 🎸 | Climbing 🧗🏼</p>
-    </div>
+
+      <h1>Max Escobar Viegas</h1>
+      <h3>Programming 🧑🏻‍💻 | Music 🎸 | Climbing 🧗🏼</h3>
 </div>
 
 <div class="navbar">
@@ -40,11 +36,11 @@
 
   <div class="main">
     <div class="row">
-      <div class="navbar">
+
         <button class="btn_personal" id="work" onclick="showButtonDiv(this.className, this.id)">Work Experience</button>
         <button class="btn_personal" id="education" onclick="showButtonDiv(this.className, this.id)">Education and Training</button>
         <button class="btn_personal" id="skills" onclick="showButtonDiv(this.className, this.id)">Skills and Hobbies</button>
-    </div>
+
     </div>
 
     <div class="div_personal" id="work">
