chore: removed sections title

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     </div>
 
     <div class="div_personal" id="work">
-      <h1>Work Experience</h1>
       <h2>WORKING STUDENT – SIEMENS</h2>
     <h5>1/10/2023 – CURRENT – München, Germany</h5>
    
@@ -98,7 +97,6 @@
     
 
     <div class="div_personal" id="education" hidden="hidden">
-    <h1>Education and Training</h1>
     <h2>M. SC. MANAGEMENT AND TECHNOLOGY – Technische Universität München</h2>
     <h5>01/10/2023 – CURRENT – München, Germany</h5>
    
@@ -123,7 +121,6 @@
     </div>
 
     <div class="div_personal" id="skills" hidden="hidden">
-      <h1>Skills and Hobbies</h1>
       <h2>LANGUAGE SKILLS</h2>
       <p><b>Mother tongue:</b> Spanish</p>
       <div class="table">
@@ -158,7 +155,7 @@
           </tbody>
         </table>
       </div>
-      <h2>Experience using: </h2>
+      <h2>PROGRAMMING EXPERIENCE: </h2>
       <div class="skills-container">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/rust.svg" alt="Rust" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/python.svg" alt="Python" class="skill-logo">
