chore: table and icons according to pallete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="header">
 
       <h1>Max Escobar Viegas</h1>
-      <h3>Programming 🧑🏻‍💻 | Music 🎸 | Climbing 🧗🏼</h3>
+      <h3>Learning by doing</h3>
 </div>
 
 <div class="navbar">
