--- a/maxiboy.html
+++ b/maxiboy.html
@@ -16,9 +16,8 @@
 <body>
 
 <div class="header">
-    <img id= "profile-pic" src="images/image_4.jpg" alt="Max Profile Picture" class="profile-pic"/>
-    <div class="enlargetext"><h1>Max Escobar Viegas</h1></div>
-    <p>Programming 🧑🏻‍💻| Music 🎸| Climbing 🧗🏼</p>
+    <h1>Max Escobar Viegas</h1>
+    <h3>Aprender haciendo</h3>
 </div>
 
 <div class="navbar">
