chore: added flags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Max Escobar</title>
+<title>Max Escobar Viegas</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="portfolio-website" />
@@ -122,7 +122,7 @@
 
     <div class="div_personal" id="skills" hidden="hidden">
       <h2>LANGUAGE SKILLS</h2>
-      <p><b>Mother tongue:</b> Spanish</p>
+      <p><b>Mother tongue:</b> Spanish 🇨🇱</p>
       <div class="table">
         <table>
           <thead>
@@ -137,7 +137,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>English</td>
+              <td>English 🇺🇸</td>
               <td>C1</td>
               <td>C1</td>
               <td>B2</td>
@@ -145,7 +145,7 @@
               <td>B2</td>
             </tr>
             <tr>
-              <td>German</td>
+              <td>German 	🇩🇪</td>
               <td>A2</td>
               <td>A2</td>
               <td>A2</td>
