chore: added html

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/sqlite.svg" alt="SQLite" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/mysql.svg" alt="MySQL" class="skill-logo">
         <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/javascript.svg" alt="JavaScript" class="skill-logo">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/html5.svg" alt="HTML" class="skill-logo">
       </div></div>
     
   </div>
